Add blocklist feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ vanity-auth-token=abc123
 
 # Clients with the correct admin token in their HTTP header can delete vanity URLs
 admin-auth-token=123abc
+
+# Disables blocklist check for vanity URLs
+vanity-ignore-blocklist=true
