Add automatic pruning of unused shorts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ admin-auth-token=123abc
 
 # Disables blocklist check for vanity URLs
 vanity-ignore-blocklist=true
+
+# Period for a scheduled task cleaning the database in seconds
+database-cleaning-period=3600
+
+# How long a short that has never been used should be able to live in seconds
+unused-short-ttl=604800
